--- a/Showcase/Views/Blog/Post.cshtml
+++ b/Showcase/Views/Blog/Post.cshtml
@@ -61,9 +61,7 @@
         <div class="ds-comment-wrap">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2">
-                    </div>
-                    <div class="col-lg-8 col-md-12">
+                    <div class="offset-lg-2 col-lg-8 col-md-12">
                         <div class="ds-comment-entry">
                             <h2 class="ds-subtitle ds-comment-title"><span class="lnr lnr-bubble"></span> Comments</h2>
                             <p class="ds-response-title">
@@ -88,7 +86,6 @@
                             }
 
                         </div>
-                        <div class="col-lg-2"></div>
                     </div>
                 </div>
             </div>
