--- a/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
@@ -13,7 +13,7 @@
                     <p>Dashboard</p>
                 </a>
             </li>
-            <li id="ds-authors"  class="nav-item">
+            <li id="ds-authors" class="nav-item">
                 <a class="nav-link" href="/Admin/Authors/">
                     <i class="nc-icon nc-circle-09"></i>
                     <p>Authors</p>
@@ -35,6 +35,12 @@
                 <a class="nav-link" href="/Admin/Tags/">
                     <i class="nc-icon nc-tag-content"></i>
                     <p>Tags</p>
+                </a>
+            </li>
+            <li id="ds-projects" class="nav-item">
+                <a class="nav-link" href="/Admin/Comments/">
+                    <i class="nc-icon nc-chat-round"></i>
+                    <p>Comments</p>
                 </a>
             </li>
             <li id="ds-workouts" class="nav-item">
