--- a/Showcase/Content/Site.css
+++ b/Showcase/Content/Site.css
@@ -46,11 +46,12 @@ body #ds-comment-box .comment {
     width: 100%;
     font-family: 'Roboto';
     font-size: 16px;
+    list-style-type: none;
     opacity: 0.9;
 }
 body #ds-comment-box .new-comment {
     box-shadow: 0 1px 2px rgba(0,0,0,.05);
-    color: #767779;
+    color: #828bb2;
     background-color: #fff;
     border-radius: 2px;
     padding: 20px;
@@ -61,7 +62,6 @@ body #ds-comment-box .new-comment {
     width: 100%;
     font-family: 'Roboto';
     font-size: 16px;
-    opacity: 0.9;
 }
 body .ds-comment-title {
     line-height: 1.5;
@@ -472,10 +472,6 @@ body .ds-post-content .rounded-circle {
 
 body .ds-post-content .ds-author-row {
 	height: 117px;
-}
-
-body .ds-content-container {
-	padding: 0px;
 }
 
 body .ds-content-container .ds-post-subtitle {
