--- a/Showcase/Views/Shared/_Footer.cshtml
+++ b/Showcase/Views/Shared/_Footer.cshtml
@@ -30,19 +30,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-footer-widget instafeed">
-                        <h6 class="footer_title">Instagram Feed</h6>
-                        <ul class="list instafeed d-flex flex-wrap">
-                            <li><img src="~/Content/images/i1.jpg" alt=""></li>
-                            <li><img src="~/Content/images/i2.jpg" alt=""></li>
-                            <li><img src="~/Content/images/i3.jpg" alt=""></li>
-                            <li><img src="~/Content/images/i4.jpg" alt=""></li>
-                            <li><img src="~/Content/images/i5.jpg" alt=""></li>
-                            <li><img src="~/Content/images/i6.jpg" alt=""></li>
-                            <li><img src="~/Content/images/i7.jpg" alt=""></li>
-                            <li><img src="~/Content/images/i8.jpg" alt=""></li>
-                        </ul>
-                    </div>
+                    @{ Html.RenderAction("_InstagramPartial", "Blog"); }
+
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6">
                     <div class="single-footer-widget f_social_wd">
