--- a/Showcase/Content/Site.css
+++ b/Showcase/Content/Site.css
@@ -213,7 +213,7 @@ body .ds-author-name {
     line-height: 1.5rem;
     color: #828bb2;
     font-weight: 400;
-    font-family: 'Roboto';
+    font-family: "Poppins", Arial, sans-serif;
     margin: 4px 0px 0px 0px;
 }
 body .ds-post-page .op-post-subtitle {
@@ -246,7 +246,7 @@ body .ds-author-button {
     padding: 0px 10px;
     margin-left: 10px;
     color: #007bff;
-    font-family: 'Roboto';
+    font-family: "Poppins", Arial, sans-serif;
     position: relative;
     bottom: 1px;
     font-weight: 400;
@@ -610,6 +610,13 @@ body .ds-img-shade {
     width: 100%;
     height: 100%;
     opacity: 0.2;
+}
+
+html ::selection {
+    background: #3297FD !important; /* WebKit/Blink Browsers */
+}
+html ::-moz-selection {
+    background: #3297FD !important; /* Gecko Browsers */
 }
 
 @media only screen and (max-width: 767px) {
