--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -28,13 +28,13 @@
 
             <div class="form-group s-tiny-group">
                 @Html.LabelFor(model => model.PostContent, htmlAttributes: new { @class = "control-label" })
-                @Html.TextAreaFor(m => m.PostContent, new { rows = "10", cols = "150", @class = "ds-fields form-control", @id = "ShowcaseEditor" })
+                @Html.EditorFor(model => model.PostContent, new { htmlAttributes = new { @class = "form-control description", @id = "ShowcaseEditor" } })
                 @Html.ValidationMessageFor(model => model.PostContent, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group s-tiny-group">
                 @Html.LabelFor(model => model.PostSnippet, htmlAttributes: new { @class = "control-label" })
-                @Html.TextAreaFor(m => m.PostSnippet, new { rows = "10", cols = "150", @class = "ds-fields form-control", @id = "ShowcaseSnippet", @maxlength = "100" })
+                @Html.EditorFor(model => model.PostSnippet, new { htmlAttributes = new { @class = "form-control description", @id = "ShowcaseSnippet", @maxlength = "100" } })
                 @Html.ValidationMessageFor(model => model.PostSnippet, "", new { @class = "text-danger" })
             </div>
         </div>
