--- a/Showcase/Areas/Admin/Views/Posts/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Index.cshtml
@@ -19,7 +19,7 @@
     
 </div>
 
-<table id="ShowcaseDataTable" class="table responsive">
+<table id="ShowcaseDataTable" class="table">
     <thead>
         <tr>
             <th>
