--- a/Showcase/Areas/Admin/Views/Albums/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Albums/Index.cshtml
@@ -14,27 +14,33 @@
             @Html.ActionLink("Create New", "Create")
         </button>
     </div>
+
+    @Html.Partial("_StatusMessage", TempData["StatusMessage"])
+
 </div>
 
 <table id="ShowcaseDataTable" class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.AlbumName)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.AlbumName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AlbumId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AlbumId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AlbumId })
-        </td>
-    </tr>
-}
-
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AlbumName)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AlbumName)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.AlbumId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.AlbumId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.AlbumId })
+            </td>
+        </tr>
+    }
+    </tbody>
 </table>
