--- a/Showcase/Areas/Admin/Views/Authors/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Authors/Index.cshtml
@@ -14,6 +14,9 @@
             @Html.ActionLink("Create New", "Create")
         </button>
     </div>
+
+    @Html.Partial("_StatusMessage", TempData["StatusMessage"])
+
 </div>
 
 <table id="ShowcaseDataTable" class="table">
