--- a/Showcase/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Categories/Index.cshtml
@@ -14,9 +14,13 @@
             @Html.ActionLink("Create New", "Create")
         </button>
     </div>
+
+    @Html.Partial("_StatusMessage", TempData["StatusMessage"])
+
 </div>
 
-    <table id="ShowcaseDataTable" class="table">
+<table id="ShowcaseDataTable" class="table">
+    <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.CategoryName)
@@ -26,21 +30,23 @@
             </th>
             <th></th>
         </tr>
-    
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryDescription)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.CategoryId }) |
-                @Html.ActionLink("Details", "Details", new { id=item.CategoryId }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.CategoryId })
-            </td>
-        </tr>
-    }
-    
-    </table>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CategoryName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CategoryDescription)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.CategoryId }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.CategoryId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.CategoryId })
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
