--- a/Showcase/Areas/Admin/Views/Tags/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Tags/Index.cshtml
@@ -5,66 +5,59 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-
-<div class="col-lg-12">
-    <div class="row">
-        <div class="page-header">
-            <div class="col-lg-11">
-                <h2>Index</h2>
-            </div>
-            <div class="col-md-1 col-lg-1 icon">
-                <span class="pull-right">
-                    <i class="fa fa-fw fa-4x fa-home"></i>
-                </span>
-            </div>
-        </div>
+<div class="row ds-title-row">
+    <div class="col-sm-1">
+        <h2 class="ds-admin-title">Index</h2>
     </div>
+    <div class="col-sm-11">
+        <button class="ds-create-btn">
+            @Html.ActionLink("Create New", "Create")
+        </button>
+    </div>
+
+    @Html.Partial("_StatusMessage", TempData["StatusMessage"])
+
 </div>
 
-<div class="col-lg-12">
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table id="admin-table" class="display responsive no-wrap" width="100%">
-<thead>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.TagName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastModified)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TagDescription)
-        </th>
-        <th></th>
-    </tr>
- </thead>
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TagName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Created)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastModified)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TagDescription)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.TagId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.TagId })
-        </td>
-    </tr>
-}
-
+<table id="ShowcaseDataTable" class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TagName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Created)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastModified)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TagDescription)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TagName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Created)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastModified)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TagDescription)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.TagId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.TagId })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
-
-</div>
